syntax = "proto3";

package elysnetwork.elys.incentive;

import "elys/incentive/params.proto";
import "elys/incentive/distribution.proto";

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/elys-network/elys/x/incentive/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/elys-network/elys/incentive/params";
  
  }
  
  // ValidatorOutstandingRewards queries rewards of a validator address.
  rpc ValidatorOutstandingRewards (QueryValidatorOutstandingRewardsRequest) returns (QueryValidatorOutstandingRewardsResponse) {
    option (google.api.http).get = "/elys-network/elys/incentive/validators/{validator_address}/outstanding_rewards";
  
  }
  
  // ValidatorCommission queries accumulated commission for a validator.
  rpc ValidatorCommission (QueryValidatorCommissionRequest) returns (QueryValidatorCommissionResponse) {
    option (google.api.http).get = "/elys-network/elys/incentive/validators/{validator_address}/commission";
  
  }
  
  // ValidatorSlashes queries slash events of a validator.
  rpc ValidatorSlashes (QueryValidatorSlashesRequest) returns (QueryValidatorSlashesResponse) {
    option (google.api.http).get = "/elys-network/elys/incentive/validators/{validator_address}/slashes";
  
  }
  
  // Queries a list of DelegationRewards items.
  rpc DelegationRewards (QueryDelegationRewardsRequest) returns (QueryDelegationRewardsResponse) {
    option (google.api.http).get = "/elys-network/elys/incentive/delegators/{delegator_address}/rewards/{validator_address}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryValidatorOutstandingRewardsRequest {
  string validator_address = 1;
}

message QueryValidatorOutstandingRewardsResponse {
  ValidatorOutstandingRewards rewards = 1 [(gogoproto.nullable) = false];
}

message QueryValidatorCommissionRequest {
  string validator_address = 1;
}

message QueryValidatorCommissionResponse {
  
  // commission defines the commision the validator received.
  ValidatorAccumulatedCommission commission = 1 [(gogoproto.nullable) = false];
}

message QueryValidatorSlashesRequest {
  option (gogoproto.goproto_getters) = false;
  
  // validator_address defines the validator address to query for.
  string validator_address = 1;
  
  // starting_height defines the optional starting height to query the slashes.
  uint64 starting_height = 2;
  
  // starting_height defines the optional ending height to query the slashes.
  uint64 ending_height = 3;
  
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 4;
}

message QueryValidatorSlashesResponse {
  
  // slashes defines the slashes the validator received.
  repeated ValidatorSlashEvent slashes = 1 [(gogoproto.nullable) = false];
  
  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryDelegationRewardsRequest {
  option (gogoproto.goproto_getters) = false;

  string delegator_address = 1;
  string validator_address = 2;
}

message QueryDelegationRewardsResponse {
  // rewards defines the rewards accrued by a delegation.
  repeated cosmos.base.v1beta1.DecCoin rewards = 1
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins"];
}

